--- a/innerpage.html
+++ b/innerpage.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="header">
-	<h1 class="animated heartBeat slow">Made with &#10084;</h1>
+	<h1 class="animated heartBeat infinite slow">Made with &#10084;</h1>
 </div>
 <div class="restofbody">
 	<div class="photocontainer">
