--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Welcome</title>
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
 	<link rel="stylesheet" href="animate.min.css">
