--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 
 </div>
 
+<div class="footer">
+	<p> CONCEPT, CREATION AND DEVELOPED BY ABHISEK SAHA <br/> COPYRIGHTS RESERVED BY ABHISEK SAHA</p>
+</div>
+
 
 </body>
 </html>
