--- a/innerpage.html
+++ b/innerpage.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="header">
-	<h1 class="animated heartBeat infinite slow">Made with &#10084;</h1>
+	<h1 class="animated heartBeat infinite slow">&#10084; from a shoitan, for a shoitan &#10084;</h1>
 </div>
 <div class="restofbody">
 	<div class="photocontainer">
@@ -63,7 +63,9 @@
 </div>
 
 
-
+<div class="footer">
+	<p> CONCEPT, CREATION AND DEVELOPED BY ABHISEK SAHA <br/> COPYRIGHTS RESERVED BY ABHISEK SAHA</p>
+</div>
 
 </body>
 </html>
