--- a/innerpage.html
+++ b/innerpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8"> 
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Welcome</title>
 	<link rel="stylesheet" type="text/css" href="innerpagestyle.css">
@@ -15,56 +16,91 @@
 	<h1 class="animated heartBeat infinite slow">from a shoitan <br/> for a shoitan <br/> &#10084;</h1>
 </div>
 <div class="restofbody">
-	<div class="photocontainer">
+	<div class="photocontainer" onclick="myFunction(1)">
 		<audio class="audio" src="audio/1.mp3"></audio>
 		<img class='Image' src='abcd/9.jpg' onclick="play(1)">
+		<div class="popup">
+			<p class="popuptext myPopup"> "হে  ঊ", এইটা ছিল আমাদের প্রথম কথা  </p>
+		</div>
 	</div>
-	<div class="photocontainer">
+	<div class="photocontainer" onclick="myFunction(2)">
 		<audio class="audio" src="audio/2.mp3"></audio>
 		<img class='Image' src='abcd/18.jpg' onclick="play(2)">
+		<div class="popup">
+			<p class="popuptext myPopup"> তারপর কত কথাই না হয়েছে , কত রকমের কথা , কত প্রসঙ্গে কথা   </p>
+		</div>
+		
 	</div>
-	<div class="photocontainer">
+	<div class="photocontainer" onclick="myFunction(3)">
 		<audio class="audio" src="audio/3.mp3"></audio>
 		<img class='Image' src='abcd/20.jpg' onclick="play(3)">
+		<div class="popup">
+			<p class="popuptext myPopup"> সারাদিন  টুকটাক চলতেই থাকে , কখনো মেসেজ কখনো কল , কখনো ভিডিও  </p>
+		</div>
+		
 	</div>
-	<div class="photocontainer">
+	<div class="photocontainer" onclick="myFunction(4)">
 		<audio class="audio" src="audio/4.mp3"></audio>
 		<img class='Image' src='abcd/22.jpg' onclick="play(4)">
+		<div class="popup">
+			<p class="popuptext myPopup"> সত্যি কথা বলতে বেশ ভালই লাগে তর সাথে কথা বলতে </p>
+		</div>
 	</div>
-	<div class="photocontainer">
+	<div class="photocontainer" onclick="myFunction(5)">
 		<audio class="audio" src="audio/5.mp3"></audio>
 		<img class='Image' src='abcd/28.jpg' onclick="play(5)">
+		<div class="popup">
+			<p class="popuptext myPopup">ফেসবুক এ অনেকদিন আগেই দেখেছিলাম , ফ্রেন্ড ও ছিলাম, কিন্তু সাহস হয়নি কোনদিন মেসেজ করার </p>
+		</div>
 	</div>
-	<div class="photocontainer">
+	<div class="photocontainer" onclick="myFunction(6)">
 		<audio class="audio" src="audio/6.mp3"></audio>
 		<img class='Image' src='abcd/29.jpg' onclick="play(6)">
+		<div class="popup">
+			<p class="popuptext myPopup">কে জানত তুই নিজে থেকেই একদিন মেসেজ করে বসবি </p>
+		</div>
 	</div>
-	<div class="photocontainer">
+	<div class="photocontainer" onclick="myFunction(7)">
 		<audio class="audio" src="audio/7.mp3"></audio>
 		<img class='Image' src='abcd/30.jpg' onclick="play(7)">
+		<div class="popup">
+			<p class="popuptext myPopup"> তবে ফেসবুক এ দেখে গান শুনে যতটা ভাল লেগেছিল, তোর সাথে কথা বলে আর বেশিই ভালো  লেগেছে </p>
+		</div>
 	</div>
-	<div class="photocontainer">
+	<div class="photocontainer" onclick="myFunction(8)">
 		<audio class="audio" src="audio/8.mp3"></audio>
 		<img class='Image' src='abcd/33.jpg' onclick="play(8)">
+		<div class="popup">
+			<p class="popuptext myPopup">জানি তোকে বড্ড জালাতন করি, তবে তুই ও কম জালাস  না আমাকে, সব কিছুই এনজয় করি আমি  </p>
+		</div>
 	</div>
-	<div class="photocontainer">
+	<div class="photocontainer" onclick="myFunction(9)">
 		<audio class="audio" src="audio/2.mp3"></audio>
 		<img class='Image' src='abcd/39.jpg' onclick="play(9)">
+		<div class="popup">
+			<p class="popuptext myPopup">তাই আপনাকে অনেক ধন্যবাদ আমার এই বর্ণহীন জীবনে বর্ণালী হয়ে আসার জন্য </p>
+		</div>
 	</div>
-	<div class="photocontainer">
+	<div class="photocontainer" onclick="myFunction(10)">
 		<audio class="audio" src="audio/10.mp3"></audio>
 		<img class='Image' src='abcd/34.jpg' onclick="play(10)">
+		<div class="popup">
+			<p class="popuptext myPopup">আর কৃতজ্ঞ আমার যত আবালের মত কথা, জ্ঞান শোনার জন্য আর</p>
+		</div>
 	</div>
-	<div class="photocontainer">
+	<div class="photocontainer" onclick="myFunction(11)">
 		<audio class="audio" src="audio/11.mp3"></audio>
 		<img class='Image' src='abcd/17.jpg' onclick="play(11)">
+		<div class="popup">
+			<p class="popuptext myPopup">ভাল থাক, খুশি থাক, আর বড় গায়িকা হওয়ার লক্ষে এগিয়ে যা </p>
+		</div>
 	</div>
 	
 </div>
 
 
 <div class="footer">
-	<p> CONCEPT, CREATION AND DEVELOPED BY ABHISEK SAHA <br/> COPYRIGHTS RESERVED BY ABHISEK SAHA</p>
+	<p> CONCEPT, CREATION AND DEVELOPED BY ABHISEK SAHA <br/> COPYRIGHTS RESERVED BY ABHISEK SAHA </p>
 </div>
 
 </body>
