--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="IntroPage">
-	<h1 class="animated bounceInDown slow">Welcome</h1>
+	<h1 class="animated bounceInDown slow">Welcome <br/> Khepi</h1>
 </div>
 <div class="accessClass animated fadeIn delay-2s">
 	<h1>Enter Your Name To Get Access</h1>
