--- a/innerpage.html
+++ b/innerpage.html
@@ -13,9 +13,10 @@
 <body>
 
 <div class="header">
-	<h1 class="animated heartBeat infinite slow">from a shoitan <br/> for a shoitan <br/> &#10084;</h1>
+	<h1 class="animated heartBeat infinite slow">from a shoitan, for a shoitan <br/> &#10084;</h1>
 </div>
 <div class="restofbody">
+	<p class="magic"> CLICK THE PICTURES ONE BY ONE TO FEEL MAGIC </p>
 	<div class="photocontainer" onclick="myFunction(1)">
 		<audio class="audio" src="audio/1.mp3"></audio>
 		<img class='Image' src='abcd/9.jpg' onclick="play(1)">
