--- a/innerpage.html
+++ b/innerpage.html
@@ -86,7 +86,7 @@
 		<audio class="audio" src="audio/10.mp3"></audio>
 		<img class='Image' src='abcd/34.jpg' onclick="play(10)">
 		<div class="popup">
-			<p class="popuptext myPopup">আর কৃতজ্ঞ আমার যত আবালের মত কথা, জ্ঞান শোনার জন্য আর</p>
+			<p class="popuptext myPopup">আর কৃতজ্ঞ আমার যত আবালের মত কথা, জ্ঞান শোনার জন্য</p>
 		</div>
 	</div>
 	<div class="photocontainer" onclick="myFunction(11)">
